<resources>
    <string name="app_name">House Hunter</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_information">Personal Information</string>
    <string name="listed_ads">Listed Ads</string>
    <string name="app_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur non magna eget diam efficitur lacinia. Sed mollis nibh volutpat, viverra est in, sagittis lacus. Ut non magna sem. Etiam ultrices diam justo, nec vestibulum dolor ullamcorper a. Phasellus dictum sollicitudin nunc. Donec faucibus posuere lectus, non dapibus eros sollicitudin ut. Sed mattis augue eget facilisis faucibus. In nec mattis velit, ut porttitor ex. Nunc gravida nec arcu sed pretium. Integer pretium nisl in massa posuere, ac luctus massa sagittis. Nulla vulputate, elit eu posuere imperdiet, eros nulla feugiat erat, et aliquet arcu tellus vel massa. Praesent quis ex leo. Nam auctor congue dolor, sit amet interdum tellus. Maecenas posuere in odio pellentesque egestas. Proin ut rhoncus justo. Sed suscipit faucibus arcu ut vulputate.</string>
    <string name="from">From</string>
    <string name="move_in">Move in</string>
    <string name="move_out">Move out</string>
    <string name="no_internet_connection_available">No Internet Connection Available.</string>
    <string name="please_reconnect_to_continue">Please reconnect to continue.</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="developers">Developers</string>
    <string name="thomas_kiely">Thomas Kiely</string>
    <string name="sean_morrissey">Sean Morrissey</string>
    <string name="paul_murphy">Paul Murphy</string>
    <string name="mark_mcnabola">Mark McNabola</string>
    <string name="description">Description</string>
    <string name="get_started">Get Started</string>
    <string name="welcome_to_house_hunter">Welcome to House Hunter</string>
    <string name="log_in">Log in</string>
    <string name="create_account">Create Account</string>
    <string name="address">Address</string>
    <string name="number_of_rooms">Number of rooms</string>
    <string name="price">Price</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="submit">Submit</string>
    <string name="attach_image">Attach Image</string>
    <string name="attached_image">Attached Image</string>
    <string name="show_ads">Show Ads</string>
    <string name="list_ad">List ad</string>
    <string name="week">/week</string>
    <string name="rooms">Rooms</string>
    <string name="last_rooms_available">Last rooms available!</string>
    <string name="let_information">Let Information</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="delete_listing">Delete Listing</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="edit_display_name">Edit Display Name</string>
    <string name="email">Email</string>
    <string name="date_joined">Date Joined</string>
    <string name="last_login">Last Login</string>
    <string name="save_changes">Save Changes</string>
    <string name="edit">Edit</string>
    <string name="inbox">Inbox</string>
    <string name="listings">Listings</string>
    <string name="liked_ads">Liked Ads</string>
    <string name="general">General</string>
    <string name="developer_information">Developer Information</string>
    <string name="app_website">App Website</string>
    <string name="night_mode">Night Mode</string>
    <string name="log_out">Log Out</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_username">Enter username</string>
    <string name="confirm_password">Confirm password</string>
</resources>
