<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HouseDetailsFragment">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/listing_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        app:srcCompat="@color/colorAccent" />
    <TextView
        android:id="@+id/address_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/source_sans_pro"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="address"/>
    <LinearLayout
        android:layout_marginLeft="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/source_sans_pro"
            android:textSize="16sp"
            android:text="@string/from"/>
        <TextView
            android:id="@+id/price_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:text="€100"
            android:fontFamily="@font/source_sans_pro"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="/week"
            android:fontFamily="@font/source_sans_pro"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="description"
            android:textSize="16sp"
            android:fontFamily="@font/source_sans_pro"/>
        <TextView
            android:id="@+id/description_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="description"
            android:textSize="16sp"
            android:fontFamily="@font/source_sans_pro"/>
        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="Rooms"
            android:textSize="16sp"
            android:fontFamily="@font/source_sans_pro"/>
        <TextView
            android:id="@+id/rooms_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="Rooms"
            android:textSize="16sp"
            android:fontFamily="@font/source_sans_pro"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_in"
            android:fontFamily="@font/source_sans_pro"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/move_in_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date"
            android:textStyle="bold"
            android:fontFamily="@font/source_sans_pro"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_out"
            android:fontFamily="@font/source_sans_pro"
            android:textSize="14sp"/>
        <TextView
            android:id="@+id/move_out_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Date"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/source_sans_pro"
            android:textSize="16sp"/>
    </LinearLayout>
    <Button
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Contact Seller"
        android:fontFamily="@font/source_sans_pro"
        android:background="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="16dp"
        android:textColor="@color/quantum_white_100"/>

</LinearLayout>

</ScrollView>